--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   simple_animations: ^1.3.3
+  shimmer: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
