--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  clay_containers: ^0.2.2
   simple_animations: ^1.3.3
   shimmer: ^1.0.1
   custom_navigation_bar:
